# claude-diarize

./: .env.example  .gitignore  .rooignore  combined_pipeline.py  comparison_logic.py  diarization_test.py  granite_pipeline.py  main.py  pyproject.toml  whisper_pipeline.py
documentation/: ibm-granite-example.py
