[project]
name = "claude-diarize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "ffmpeg>=1.4",
    "librosa>=0.11.0",
    "peft>=0.17.1",
    "pyannote-audio>=4.0.1",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
